# raytracing-course

./: .clang-format  CMakeLists.txt  README.md  build.sh  format.sh  run.sh
source/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp  distributions.cpp  distributions.hpp  image.cpp  image.hpp  io.cpp  io.hpp  main.cpp  primitive.cpp  primitive.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  utils.cpp  utils.hpp
test_scenes/: scene_3_2.txt  scene_3_heavy.txt
